# arm-cmake-ti

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  TMS570LC43_RTOS_LEDs.dil  TMS570LC43_RTOS_LEDs.hcg  buildARM.sh  flashARM.sh  movetobuild.sh  runTests.sh  target-toolchain.cmake
Debug/: TMS570LC43_RTOS_LEDs.map  TMS570LC43_RTOS_LEDs.out  TMS570LC43_RTOS_LEDs_linkInfo.xml  ccsObjs.opt  makefile
Debug/source/: HL_adc.d  HL_can.d  HL_crc.d  HL_ecap.d  HL_emif.d  HL_errata_SSWF021_45.d  HL_i2c.d  HL_mdio.d  HL_nmpu.d  HL_notification.d  HL_phy_tlk111.d  HL_pom.d  HL_sys_dma.d  HL_sys_main.d  HL_sys_pcr.d  HL_sys_pmm.d  HL_sys_startup.d  os_list.d  os_mpu_wrappers.d  os_port.d  os_queue.d  os_tasks.d  subdir_rules.mk
Release/: TMS570LC43_RTOS_LEDs.map  TMS570LC43_RTOS_LEDs.out  TMS570LC43_RTOS_LEDs_linkInfo.xml  makefile
Release/source/: HL_dcc.d  HL_emac.d  HL_epc.d  HL_eqep.d  HL_errata.d  HL_esm.d  HL_etpwm.d  HL_gio.d  HL_het.d  HL_lin.d  HL_mibspi.d  HL_phy_dp83640.d  HL_pinmux.d  HL_sci.d  HL_sys_phantom.d  HL_sys_vim.d  HL_system.d  os_croutine.d  os_event_groups.d  os_heap.d  os_timer.d  subdir_rules.mk  subdir_vars.mk
SafeTIDiagnosticLibrary/2.3.1/TPS_Driver/include/: TPS_DebugSupport.h  Tps_Config.h  Tps_Driver.h  Tps_Types.h
SafeTIDiagnosticLibrary/2.3.1/TPS_Driver/source/: TPS_DebugSupport.c  Tps_Driver.c  Tps_Interface.c  Tps_Interface.h  Tps_priv.h
SafeTIDiagnosticLibrary/2.3.1/build_TPSDriverLib/: .cproject  .project
SafeTIDiagnosticLibrary/2.3.1/build_safeTILib/: .ccsproject  .cproject  .project  SafeTILib.dep  SafeTILib.ewd  SafeTILib.ewp
SafeTIDiagnosticLibrary/2.3.1/build_safeTILib/settings/: SafeTILib.Debug_TMS570LS04_BE.cspy.bat  SafeTILib.Debug_TMS570LS12_BE.cspy.bat  SafeTILib.Debug_TMS570LS31_BE.cspy.bat
SafeTIDiagnosticLibrary/2.3.1/demo_app/HALCoGen/TMS570LC4357_NoOS/: TMS570LC43x.dil  TMS570LC43x.hcg  TMS570LC43x_bak.dil
SafeTIDiagnosticLibrary/2.3.1/demo_app/HALCoGen/TMS570LC4357_NoOS/include/: HL_adc.h  HL_can.h  HL_dcc.h  HL_emac.h  HL_epc.h  HL_eqep.h  HL_etpwm.h  HL_sci.h  (+4 more)
SafeTIDiagnosticLibrary/2.3.1/demo_app/common/include/: Application_Configuration.h  esm_application_callback.h  register_readback.h
SafeTIDiagnosticLibrary/2.3.1/demo_app/common/source/: app_main_NoOS.c  esm_application_callback.c  exception_handlers.c  faultInject.c  misc.asm  misc_KEIL.asm
SafeTIDiagnosticLibrary/2.3.1/docs/: SafeTIDiagnosticLibrary-User'sGuide-v2.3.1.chm  TPSDriver-User'sGuide-v2.3.1.chm
SafeTIDiagnosticLibrary/2.3.1/hal/include/: reg_bitdefn_adc.h  reg_bitdefn_dcc.h  reg_bitdefn_dma.h  reg_bitdefn_efc.h  reg_bitdefn_esm.h  reg_bitdefn_f021flash.h  reg_bitdefn_het.h  reg_bitdefn_htu.h  reg_bitdefn_iomm.h  reg_bitdefn_l2ramw.h  reg_bitdefn_mibspi.h  reg_bitdefn_pcr.h  reg_bitdefn_pmm.h  reg_bitdefn_rti.h  reg_bitdefn_sci.h  reg_bitdefn_scm.h  reg_bitdefn_stc.h  reg_bitdefn_system.h  reg_bitdefn_tcmram.h  reg_bitdefn_vim.h  sl_hal_stdtypes.h  sl_reg_adc.h  sl_reg_can.h  sl_reg_dcc.h  sl_reg_dma.h  sl_reg_efc.h  sl_reg_epc.h  sl_reg_esm.h  sl_reg_flash.h  sl_reg_het.h  sl_reg_lin.h  sl_reg_mibspi.h  sl_reg_pbist.h  sl_reg_pcr.h  sl_reg_pmm.h  sl_reg_rti.h  sl_reg_sci.h  sl_reg_spi.h  sl_reg_stc.h  sl_reg_system.h  (+2 more)
SafeTIDiagnosticLibrary/2.3.1/libs/: SafeTILib_TMS570LC43_BE.lib
SafeTIDiagnosticLibrary/2.3.1/safety_library/include/: sl_api.h  sl_config.h  sl_log.h  sl_priv.h  sl_sys_pmu.h  sl_types.h
SafeTIDiagnosticLibrary/2.3.1/safety_library/source/: sl_asm.inc  sl_asm_KEIL.inc  sl_asm_api.asm  sl_asm_api_IAR.asm  sl_asm_api_KEIL.asm  sl_esm.c  sl_init.c  sl_log.c  sl_pmu.asm  sl_pmu_IAR.asm  sl_priv.c  sl_selftest.c
SafeTIDiagnosticLibrary/2.4.0/TPS_Driver/include/: TPS_DebugSupport.h  Tps_Config.h  Tps_Driver.h  Tps_Types.h
SafeTIDiagnosticLibrary/2.4.0/TPS_Driver/source/: TPS_DebugSupport.c  Tps_Driver.c  Tps_Interface.c  Tps_Interface.h  Tps_priv.h
SafeTIDiagnosticLibrary/2.4.0/build_safeTILib/: .cproject
SafeTIDiagnosticLibrary/2.4.0/build_safeTILib/settings/: SafeTILib.Debug_RM46_LE.cspy.bat  SafeTILib.Debug_RM48_LE.cspy.bat
SafeTIDiagnosticLibrary/2.4.0/demo_app/HALCoGen/TMS570LC4357_NoOS/: TMS570LC43x_bak.hcg
SafeTIDiagnosticLibrary/2.4.0/demo_app/common/include/: Application_Types.h  Board_Config.h  Interface_Support.h  esm_application_callback.h  register_readback.h
SafeTIDiagnosticLibrary/2.4.0/demo_app/common/source/: Interface_Support.c  app_main_NoOS.c  esm_application_callback.c  exception_handlers.c  misc_IAR.asm  register_readback.c
SafeTIDiagnosticLibrary/2.4.0/docs/: SafeTIDiagnosticLibrary-User'sGuide-v2.4.0.chm  TPSDriver-User'sGuide-v2.4.0.chm
SafeTIDiagnosticLibrary/2.4.0/hal/include/: reg_bitdefn_adc.h  reg_bitdefn_can.h  reg_bitdefn_ccmr4f.h  reg_bitdefn_ccmr5f.h  reg_bitdefn_dma.h  reg_bitdefn_epc.h  reg_bitdefn_f021flash.h  reg_bitdefn_gio.h  reg_bitdefn_het.h  reg_bitdefn_htu.h  reg_bitdefn_lin.h  reg_bitdefn_mibspi.h  reg_bitdefn_pbist.h  reg_bitdefn_pmm.h  reg_bitdefn_sdcmmr.h  reg_bitdefn_stc.h  reg_bitdefn_system.h  reg_bitdefn_vim.h  sl_reg_adc.h  sl_reg_dma.h  sl_reg_efc.h  sl_reg_esm.h  sl_reg_flash.h  sl_reg_gio.h  sl_reg_htu.h  sl_reg_l2ramw.h  sl_reg_pcr.h  sl_reg_pmm.h  sl_reg_scm.h  sl_reg_sdcmmr.h  sl_reg_stc.h  sl_reg_system.h  sl_reg_tcram.h  sl_reg_vim.h  sl_sys_common.h  sl_sys_vim.h
SafeTIDiagnosticLibrary/2.4.0/libs/: SafeTILib_TMS570LC43_BE.lib
SafeTIDiagnosticLibrary/2.4.0/safety_library/include/: sl_api.h  sl_config.h  sl_log.h  sl_priv.h  sl_sys_pmu.h  sl_types.h
SafeTIDiagnosticLibrary/2.4.0/safety_library/source/: sl_asm.inc  sl_asm_IAR.inc  sl_asm_KEIL.inc  sl_asm_api.asm  sl_asm_api_IAR.asm  sl_asm_api_KEIL.asm  sl_esm.c  sl_init.c  sl_log.c  sl_misc.c  sl_pmu.asm  sl_pmu_IAR.asm  sl_priv.c  sl_selftest.c
docs/: HALCoGenOnMac.md  toolchainInstall.md  uniflashInstall.md
hal/: HL_gio.c  HL_sys_link.cmd  HL_sys_main.c
include/: HL_gio.h
source/: app_main.c
source/include/: app_main.h  common.h
test/: CMakeLists.txt  app_main_tests.cpp  led_controller_tests.cpp
test/include/: CmakeConfig.h
test/mocks/: FreeRTOS.h  HL_gio.h  os_task.h
(+28 files in other folders)
